--- a/index.html
+++ b/index.html
@@ -177,9 +177,227 @@
         </section>
 
     <!-- ------------- Skills-------------------->
-    <section class="skills section" id="skills">
+        <section class="skills section" id="skills">
+            <h2 class="section__title"> Skillset </h2>
+            <span class="section__subtitle"> My skillsets </span>
 
-    </section>
+            <div class="skills__container container grid">
+                <div class="row" id="skillset_container">
+                    <!-- Skill 1 -->
+                    <div class="skills__container-card">
+                        <div class="card_skill shadow2">
+                            <div class="imgBx">
+                                <img src="https://res.cloudinary.com/bjha/image/upload/v1627831745/skillset%20logos/HTML_5-595b40b65ba036ed117d4260_fnyo1z.svg" alt="HTML logo">
+                            </div>
+                            <div class="contentBx">
+                                <h2> HTML </h2>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Skill 2 -->
+                    <div class="skills__container-card">
+                        <div class="card_skill shadow2">
+                            <div class="imgBx">
+                                <img src="https://res.cloudinary.com/bjha/image/upload/v1627831742/skillset%20logos/Css3-595b40b65ba036ed117d3eb8_jiqifm.svg" alt="HTML logo">
+                            </div>
+                            <div class="contentBx">
+                                <h2> CSS </h2>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Skill 3 -->
+                    <div class="skills__container-card">
+                        <div class="card_skill shadow2">
+                            <div class="imgBx">
+                                <img src="https://res.cloudinary.com/bjha/image/upload/v1627831744/skillset%20logos/javascript-seeklogo.com_wthmgd.svg" alt="HTML logo">
+                            </div>
+                            <div class="contentBx">
+                                <h2> Javascript </h2>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <!-- Skill 4 -->
+                    <div class="skills__container-card">
+                        <div class="card_skill shadow2">
+                            <div class="imgBx">
+                                <img src="https://res.cloudinary.com/bjha/image/upload/v1627831742/skillset%20logos/bootstrap-5-seeklogo.com_rz32ih.svg" alt="HTML logo">
+                            </div>
+                            <div class="contentBx">
+                                <h2> Bootstrap </h2>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <!-- Skill 5 -->
+                    <div class="skills__container-card">
+                        <div class="card_skill shadow2">
+                            <div class="imgBx">
+                                <img src="https://res.cloudinary.com/bjha/image/upload/v1627831745/skillset%20logos/python-seeklogo.com_sbuevg.svg" alt="HTML logo">
+                            </div>
+                            <div class="contentBx">
+                                <h2> Python </h2>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <!-- Skill 5 -->
+                    <div class="skills__container-card">
+                        <div class="card_skill shadow2">
+                            <div class="imgBx">
+                                <img src="https://res.cloudinary.com/bjha/image/upload/v1627831742/skillset%20logos/django-seeklogo.com_uu8wtb.svg" alt="HTML logo">
+                            </div>
+                            <div class="contentBx">
+                                <h2> Django </h2>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <!-- Skill 6 -->
+                    <div class="skills__container-card">
+                        <div class="card_skill shadow2">
+                            <div class="imgBx">
+                                <img src="https://res.cloudinary.com/bjha/image/upload/v1627831743/skillset%20logos/git-seeklogo.com_eqv1dl.svg" alt="HTML logo">
+                            </div>
+                            <div class="contentBx">
+                                <h2> Git </h2>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <!-- Skill 7 -->
+                    <div class="skills__container-card">
+                        <div class="card_skill shadow2">
+                            <div class="imgBx">
+                                <img src="https://res.cloudinary.com/bjha/image/upload/v1627831742/skillset%20logos/github-seeklogo.com_yhhbou.svg" alt="HTML logo">
+                            </div>
+                            <div class="contentBx">
+                                <h2> Github </h2>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Skill 8 -->
+                    <div class="skills__container-card">
+                        <div class="card_skill shadow2">
+                            <div class="imgBx">
+                                <img src="https://res.cloudinary.com/bjha/image/upload/v1627831746/skillset%20logos/visual-studio-code-seeklogo.com_ps85dh.svg" alt="HTML logo">
+                            </div>
+                            <div class="contentBx">
+                                <h2> VS Code </h2>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <!-- Skill 9 -->
+                    <div class="skills__container-card">
+                        <div class="card_skill shadow2">
+                            <div class="imgBx">
+                                <img src="https://res.cloudinary.com/bjha/image/upload/v1627831745/skillset%20logos/tux-seeklogo.com_aiyr1d.svg" alt="HTML logo">
+                            </div>
+                            <div class="contentBx">
+                                <h2> Linux </h2>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <!-- Skill 10 -->
+                    <div class="skills__container-card">
+                        <div class="card_skill shadow2">
+                            <div class="imgBx">
+                                <img src="https://res.cloudinary.com/bjha/image/upload/v1627837663/skillset%20logos/Microsoft_Office_logo__282019_E2_80_93present_29_pswha1.svg" alt="HTML logo">
+                            </div>
+                            <div class="contentBx">
+                                <h2> Office </h2>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Skill 11 -->
+                    <div class="skills__container-card">
+                        <div class="card_skill shadow2">
+                            <div class="imgBx">
+                                <img src="https://res.cloudinary.com/bjha/image/upload/v1627837103/skillset%20logos/Google_Docs_icon__282020_29_ix96yl.svg" alt="HTML logo">
+                            </div>
+                            <div class="contentBx">
+                                <h2> Docs </h2>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Skill 12 -->
+                    
+
+                    <!-- Skill 13 -->
+                    <div class="skills__container-card">
+                        <div class="card_skill shadow2">
+                            <div class="imgBx">
+                                <img src="https://res.cloudinary.com/bjha/image/upload/v1627831745/skillset%20logos/matlab-seeklogo.com_zbczqr.svg" alt="HTML logo">
+                            </div>
+                            <div class="contentBx">
+                                <h2> MATLAB </h2>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Skill 14 -->
+                    <div class="skills__container-card">
+                        <div class="card_skill shadow2">
+                            <div class="imgBx">
+                                <img src="https://res.cloudinary.com/bjha/image/upload/v1627831746/skillset%20logos/Proteus_Design_Suite_Atom_Logo_nxdhe8.png" alt="HTML logo">
+                            </div>
+                            <div class="contentBx">
+                                <h2> Proteus </h2>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Skill 15 -->
+                    <div class="skills__container-card">
+                        <div class="card_skill shadow2">
+                            <div class="imgBx">
+                                <img src="https://res.cloudinary.com/bjha/image/upload/v1627831743/skillset%20logos/autocad-logo-C9817CB828-seeklogo.com_mscdmi.png" alt="HTML logo">
+                            </div>
+                            <div class="contentBx">
+                                <h2> AutoCAD </h2>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Skill 16 -->
+                    <div class="skills__container-card">
+                        <div class="card_skill shadow2">
+                            <div class="imgBx">
+                                <img src="https://res.cloudinary.com/bjha/image/upload/v1627832183/skillset%20logos/adobe-premiere-seeklogo.com_ifitqg.svg" alt="HTML logo">
+                            </div>
+                            <div class="contentBx">
+                                <h2> Premiere </h2>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Skill 17 -->
+                    <div class="skills__container-card">
+                        <div class="card_skill shadow2">
+                            <div class="imgBx">
+                                <img src="https://res.cloudinary.com/bjha/image/upload/v1627832183/skillset%20logos/adobe-photoshop-cc-seeklogo.com_wtay5k.svg" alt="HTML logo">
+                            </div>
+                            <div class="contentBx">
+                                <h2> Photoshop </h2>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     <!-- ------------- QUALIFICATIONS (Education and Experience) -------------------->
         <section class="qualification section" id="qualification">
 
