--- a/index.html
+++ b/index.html
@@ -776,7 +776,7 @@
             <span class="section__subtitle"> My most recent works </span>
 
             <div class="blog-slider">
-                <div class="blog-slider__wrp swipper-wrapper">
+                <div class="blog-slider__wrp swiper-wrapper">
                     
                     <!-- For portfolio item 1 -->
                     <div class="blog-slider__item swiper-slide">
@@ -787,7 +787,7 @@
                         <div class="blog-slider__content">
                             <span class="blog-slider__code"> July 2021</span>
                             <div class="blog-slider__title"> Twitter Like SNS </div>
-                            <div class="blog-slider__text"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s </div>
+                            <div class="blog-slider__text"> Designed a Twitter-like social network website for making posts and following users.</div>
                             <a href="https://youtu.be/E1X5Q3lgO30" target="_blank" class="button blog-slider__button button--flex"> 
                                 Demo
                                 <i class="uil uil-play button__icon"></i>
@@ -804,7 +804,7 @@
                         <div class="blog-slider__content">
                             <span class="blog-slider__code"> December 2020</span>
                             <div class="blog-slider__title"> E-commerce </div>
-                            <div class="blog-slider__text"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s </div>
+                            <div class="blog-slider__text"> Designed an eBay-like e-commerce auction site that will allow users to post auction listings, place bids on listings, comment on those listings, and add listings to a “watchlist.” </div>
                             <a href="https://www.youtube.com/watch?v=Zr6VA7Gl0yQ" target="_blank" class="button blog-slider__button button--flex"> 
                                 Demo
                                 <i class="uil uil-play button__icon"></i>
@@ -821,7 +821,7 @@
                         <div class="blog-slider__content">
                             <span class="blog-slider__code"> October 2020</span>
                             <div class="blog-slider__title"> MAIL </div>
-                            <div class="blog-slider__text"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s  </div>
+                            <div class="blog-slider__text"> Designed a front-end for an email client that makes API calls to send and receive emails.</div>
                             <a href="https://youtu.be/a6PlEYCYJXw" target="_blank" class="button blog-slider__button button--flex"> 
                                 Demo
                                 <i class="uil uil-play button__icon"></i>
@@ -838,7 +838,7 @@
                         <div class="blog-slider__content">
                             <span class="blog-slider__code"> September 2020</span>
                             <div class="blog-slider__title"> WiKi </div>
-                            <div class="blog-slider__text"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s  </div>
+                            <div class="blog-slider__text"> Design a Wikipedia-like online encyclopedia.</div>
                             <a href="https://www.youtube.com/watch?v=9NarL9NsRr8" target="_blank" class="button blog-slider__button button--flex"> 
                                 Demo
                                 <i class="uil uil-play button__icon"></i>
@@ -854,7 +854,67 @@
 
     <!-- ------------- CONTACT US -------------------->
         <section class="contact section" id="contact">
+            <h2 class="section__title"> Contact Me </h2>
+            <span class="section__subtitle"> Get in touch</span>
 
+            <div class="row mt-lg-6 justify-content-center contact_mail">
+                <!-- Contact information -->
+                <div class="col-lg-6 mx-lg-0 mx-2 contact__container container">
+                    <div class="contact__information">
+                        <i class="uil uil-phone contact__icon"></i>
+
+                        <div>
+                            <h3 class="contact__title">Call Me</h3>
+                            <span class="contact__subtitle">+01-989898986</span>
+                        </div>
+                    </div>
+
+                    <div class="contact__information">
+                        <i class="uil uil-envelope contact__icon"></i>
+
+                        <div>
+                            <h3 class="contact__title">E-mail</h3>
+                            <span class="contact__subtitle">mail@email.com</span>
+                        </div>
+                    </div>
+
+                    <div class="contact__information">
+                        <i class="uil uil-location-pin-alt contact__icon"></i>
+                        <div>
+                            <h3 class="contact__title">Address</h3>
+                            <span class="contact__subtitle"> Shikoku, Ehime - Japan</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- FORM -->
+                <div class="col-lg-6 pl-lg-4 mt-lg-0 mt-6 contact-form" id="message-me">
+                    <h2 class="contact__title"> Interested to work together? - <span> Let's talk </span></h2>
+
+                    <form action="#" method="POST" class="cf">
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <input type="text" name="message-name" class="form-control mb-30 cf" placeholder="Your Name">
+                            </div> 
+                            <div class="col-lg-6">
+                                <input type="email" name="message-email" class="form-control mb-30 cf" placeholder="Your Email">
+                            </div>
+                            <div class="col-12">
+                                <input type="text" name="message-subject" class="form-control mb-30 cf" placeholder="Subject">
+                            </div>
+                            <div class="col-12">
+                                <textarea name="message" class="form-control mb-30 cf" cols="30" rows="10" placeholder="Your Message"></textarea>
+                            </div>
+                            <div class="col-12">
+                                <button type="submit" class="button button--flex send-message form_button">
+                                    Send Message
+                                    <i class="uil uil-message button__icon"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </section>
     </main>
 
