--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
                                     </div>
                                     <!-- Timeline content Events -->
                                     <div class="col py-2">
-                                        <div class="card education-card mirror-face shadow2">
+                                        <div class="card education-card transparent_card mirror-face shadow2">
                                             <div class="card-body">
                                                 <div class="task">
                                                     <div class="abstract">
@@ -488,7 +488,7 @@
                                     </div>
                                     <!-- Timeline content Events -->
                                     <div class="col py-2">
-                                        <div class="card education-card mirror-face shadow2">
+                                        <div class="card education-card transparent_card mirror-face shadow2">
                                             <div class="card-body">
                                                 <div class="task">
                                                     <div class="abstract">
@@ -531,7 +531,7 @@
                                     </div>
                                     <!-- Timeline content Events -->
                                     <div class="col py-2">
-                                        <div class="card education-card mirror-face shadow2">
+                                        <div class="card education-card transparent_card mirror-face shadow2">
                                             <div class="card-body">
                                                 <div class="task">
                                                     <div class="abstract">
@@ -574,7 +574,7 @@
                                     </div>
                                     <!-- Timeline content Events -->
                                     <div class="col py-2">
-                                        <div class="card education-card mirror-face shadow2">
+                                        <div class="card education-card transparent_card mirror-face shadow2">
                                             <div class="card-body">
                                                 <div class="task">
                                                     <div class="abstract">
@@ -645,7 +645,7 @@
                                     </div>
                                     <!-- Timeline content Events -->
                                     <div class="col py-2">
-                                        <div class="card education-card mirror-face shadow2">
+                                        <div class="card education-card transparent_card mirror-face shadow2">
                                             <div class="card-body">
                                                 <div class="task">
                                                     <div class="abstract">
@@ -688,7 +688,7 @@
                                     </div>
                                     <!-- Timeline content Events -->
                                     <div class="col py-2">
-                                        <div class="card education-card mirror-face shadow2">
+                                        <div class="card education-card transparent_card mirror-face shadow2">
                                             <div class="card-body">
                                                 <div class="task">
                                                     <div class="abstract">
@@ -731,7 +731,7 @@
                                     </div>
                                     <!-- Timeline content Events -->
                                     <div class="col py-2">
-                                        <div class="card education-card mirror-face shadow2">
+                                        <div class="card education-card transparent_card mirror-face shadow2">
                                             <div class="card-body">
                                                 <div class="task">
                                                     <div class="abstract">
@@ -894,16 +894,16 @@
                     <form action="#" method="POST" class="cf">
                         <div class="row">
                             <div class="col-lg-6">
-                                <input type="text" name="message-name" class="form-control mb-30 cf" placeholder="Your Name">
+                                <input type="text" name="message-name" class="form-control form__color mb-30 cf" placeholder="Your Name">
                             </div> 
                             <div class="col-lg-6">
-                                <input type="email" name="message-email" class="form-control mb-30 cf" placeholder="Your Email">
+                                <input type="email" name="message-email" class="form-control form__color mb-30 cf" placeholder="Your Email">
                             </div>
                             <div class="col-12">
-                                <input type="text" name="message-subject" class="form-control mb-30 cf" placeholder="Subject">
+                                <input type="text" name="message-subject" class="form-control form__color mb-30 cf" placeholder="Subject">
                             </div>
                             <div class="col-12">
-                                <textarea name="message" class="form-control mb-30 cf" cols="30" rows="10" placeholder="Your Message"></textarea>
+                                <textarea name="message" class="form-control form__color mb-30 cf" cols="30" rows="5" placeholder="Your Message"></textarea>
                             </div>
                             <div class="col-12">
                                 <button type="submit" class="button button--flex send-message form_button">
